--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "browserify -t babelify index.js -o public/bundle.js",
-    "watch": "watchify -t babelify index.js -o public/bundle.js -dv"
+    "watch": "watchify -t babelify index.js -o public/bundle.js -dv",
+    "knex": "knex"
   },
   "babel": {
     "presets": [
