removed d.o.b from student profile

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "babelify": "^7.3.0",
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "knex": "^0.12.8"
   }
