make attempts to set up express and complete hello world

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "SignMeUp rejig replacing handlebars with react",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon --watch server server/index",
     "build": "browserify -t babelify client/index.js -o server/public/bundle.js",
     "watch": "watchify -t babelify client/index.js -o server/public/bundle.js -dv",
     "knex": "knex"
@@ -37,7 +38,11 @@
   "dependencies": {
     "babelify": "^7.3.0",
     "body-parser": "^1.17.1",
+    "cors": "^2.8.1",
     "express": "^4.15.2",
-    "knex": "^0.12.8"
+    "knex": "^0.12.8",
+    "nodemon": "^1.11.0",
+    "path": "^0.12.7",
+    "superagent": "^3.5.2"
   }
 }
