--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "SignMeUp rejig replacing handlebars with react",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch server server/index",
+    "start": "npm run watch & nodemon --watch server server/index",
     "build": "browserify -t babelify client/index.js -o server/public/bundle.js",
     "watch": "watchify -t babelify client/index.js -o server/public/bundle.js -dv",
     "knex": "knex"
@@ -29,7 +29,7 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
-    "browserfy": "^1.0.0",
+    "browserify": "^14.1.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "reactify": "^1.1.1",
