--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "browserify": "^14.1.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-router-dom": "^4.0.0",
     "reactify": "^1.1.1",
     "watchify": "^3.9.0"
   },
@@ -43,6 +44,7 @@
     "knex": "^0.12.8",
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
+    "sheet-router": "^4.2.3",
     "superagent": "^3.5.2"
   }
 }
